--- a/blocks/v2-truck-lineup/v2-truck-lineup.css
+++ b/blocks/v2-truck-lineup/v2-truck-lineup.css
@@ -23,7 +23,7 @@
 }
 
 /* Full width block */
-main .section.v2-truck-lineup-container .v2-truck-lineup-wrapper {
+body .section.v2-truck-lineup-container .v2-truck-lineup-wrapper {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -303,12 +303,14 @@ ul.v2-truck-lineup__navigation {
     max-width: 931px;
   }
 
+  div:where([role="dialog"]):not(.truck-lineup-content-center) .v2-truck-lineup__content .default-content-wrapper,
   main:not(.truck-lineup-content-center) .v2-truck-lineup__content .default-content-wrapper {
     align-items: flex-start;
     display: grid;
     grid-template-columns: 1fr 567px 80px 430px 1fr;
   }
 
+  div:where([role="dialog"]):not(.truck-lineup-content-center) .v2-truck-lineup__text,
   main:not(.truck-lineup-content-center) .v2-truck-lineup__text {
     width: 567px;
     max-width: none;
@@ -318,11 +320,14 @@ ul.v2-truck-lineup__navigation {
     grid-column: 2;
   }
 
+  div:where([role="dialog"]):not(.truck-lineup-content-center) .v2-truck-lineup__buttons-container,
   main:not(.truck-lineup-content-center) .v2-truck-lineup__buttons-container,
+  div:where([role="dialog"]):not(.truck-lineup-content-center) .v2-truck-lineup__buttons-container .button-container,
   main:not(.truck-lineup-content-center) .v2-truck-lineup__buttons-container .button-container {
     margin-top: 0;
   }
 
+  div:where([role="dialog"]):not(.truck-lineup-content-center) .v2-truck-lineup__buttons-container,
   main:not(.truck-lineup-content-center) .v2-truck-lineup__buttons-container {
     justify-content: start;
     grid-column: 4;
