--- a/blocks/v2-stories-carousel/v2-stories-carousel.css
+++ b/blocks/v2-stories-carousel/v2-stories-carousel.css
@@ -5,7 +5,7 @@
 }
 
 /* Full width block */
-main .section.v2-stories-carousel-container .v2-stories-carousel-wrapper {
+body .section.v2-stories-carousel-container .v2-stories-carousel-wrapper {
   margin: 0;
   padding-left: 0;
   padding-right: 0;
