--- a/styles/styles.css
+++ b/styles/styles.css
@@ -759,47 +759,20 @@ main .section.tabbed-container ul.tab-navigation button {
   border-bottom: 3px solid var(--c-cta-blue-default);
 }
 
+.redesign-v2 .icon {
+  display: flex;
+}
+
+.redesign-v2 .icon svg {
+  fill: currentcolor;
+  height: 1em;
+  width: 1em;
+}
+
 /* image as video link */
 .link-with-video {
   position: relative;
   display: block;
-}
-
-.video-icon-wrapper {
-  background: rgb(255 255 255 / 90%);
-  color: var(--volvo-text-gray);
-  width: 50px;
-  height: 50px;
-  font-size: 25px;
-  border: 0;
-  border-radius: 40px;
-  transition: .3s;
-  text-align: center;
-  overflow: hidden;
-  vertical-align: middle;
-  margin-right: 7.5px;
-  cursor: pointer;
-  box-shadow: 0 0 10px 5px rgb(0 0 0 / 30%);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  z-index: 1;
-  line-height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.video-icon-wrapper:hover {
-  background: rgb(230 230 230 / 90%);
-  color: var(--volvo-text-gray);
-  font-size: 30px;
-  opacity: .8;
-}
-
-.video-icon-wrapper .video-icon::before {
-  padding-left: 5px;
 }
 
 a.button.text-link-with-video {
@@ -810,6 +783,21 @@ a.button.text-link-with-video {
   border-radius: 0;
   border: none;
   padding: 5px;
+}
+
+.icon-play-video {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  width: 48px;
+  height: 48px;
+}
+
+.link-with-video .icon-play-video svg,
+.redesign-v2 .link-with-video .icon-play-video svg {
+  width: 48px;
+  height: 48px;
 }
 
 a.button.text-link-with-video:hover {
@@ -1334,16 +1322,6 @@ main.blue-contract .section.section-with-title p {
 .redesign-v2 :is(h1, h2, h3, h4, h5, h6) a:any-link::after,
 .redesign-v2 a.button::after {
   display: none;
-}
-
-.redesign-v2 .icon {
-  display: flex;
-}
-
-.redesign-v2 .icon svg {
-  fill: currentcolor;
-  height: 1em;
-  width: 1em;
 }
 
 /* Headings classes styles */
